// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

service ParticipantReplicationService {
  rpc SetPassive(SetPassiveRequest) returns (SetPassiveResponse);
}

message SetPassiveRequest {}
message SetPassiveResponse {}
